--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -17,12 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <android.support.design.widget.BottomNavigationView
+   <!--     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation_bottom"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_alignParentBottom="true"
-            app:menu="@menu/my_navigation_items" />
+            app:menu="@menu/my_navigation_items" />-->
+
+        <com.roughike.bottombar.BottomBar
+            android:id="@+id/navigation_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_alignParentBottom="true"
+            app:bb_tabXmlResource="@xml/bottombar_tabs"/>
 
 
     </RelativeLayout>
