--- a/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:id="@+id/group_social" android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/profile"
+            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:title="Profile" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/friends"
+            android:icon="@drawable/ic_group_black_24dp"
+            android:title="Friends" />
+
     </group>
 
-    <item android:title="Communicate">
-        <menu>
+    <group android:id="@+id/group_help" android:checkableBehavior="single">
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/settings"
+                android:icon="@drawable/ic_settings_black_24dp"
+                android:title="Settings" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+                android:id="@+id/support"
+                android:icon="@drawable/ic_help_black_24dp"
+                android:title="Support" />
+    </group>
+
+    <group android:id="@+id/group_logout" android:checkableBehavior="single">
+             <item
+                 android:id="@+id/sign_out"
+                 android:icon="@drawable/ic_exit_to_app_black_24dp"
+                 android:title="Logout" />
+    </group>
 
 </menu>
