Added fragments for BottomBar actions

--- a/app/src/main/res/xml/bottombar_tabs.xml
+++ b/app/src/main/res/xml/bottombar_tabs.xml
@@ -3,7 +3,8 @@
     <tab
         id="@+id/nav_home"
         icon="@drawable/ic_home_black_24dp"
-        title="Home" />
+        title="Home"/>
+        <!--barColorWhenSelected="#5D4037"-->
     <tab
         id="@+id/nav_search"
         icon="@drawable/ic_search_black_24dp"
