Several additions and changes to Fragments and Drawer Activity. Added Fragments for Profile, Friends, Settings, and Support. Improved code for calling Fragments in DrawerActivity. Solved Several Bugs with Navigation around the Fragments.

--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -35,6 +35,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_drawer"
+        app:itemBackground="?android:attr/windowBackground"
         app:menu="@menu/activity_drawer_drawer" />
 
 
