--- a/app/src/main/res/layout/fragment_friends_messages.xml
+++ b/app/src/main/res/layout/fragment_friends_messages.xml
@@ -5,25 +5,10 @@
     tools:context="com.example.tcver.practcook.FriendsMessagesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:elevation="1dp"
-        android:gravity="center_horizontal"
-        android:text="Fragment"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:gravity="center_horizontal"
-        android:text="Messages-Friends"
-        android:textSize="32sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
