--- a/app/src/main/res/layout/populate_people.xml
+++ b/app/src/main/res/layout/populate_people.xml
@@ -34,15 +34,27 @@
             android:layout_marginTop="10dp"
             android:text="Bio" />
 
+        <TextView
+            android:id="@+id/personFriendStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/search_friends_checkBox"
+            android:layout_alignBottom="@+id/search_friends_checkBox"
+            android:layout_alignEnd="@+id/search_friends_checkBox"
+            android:layout_alignRight="@+id/search_friends_checkBox"
+            android:text="TextView"
+            android:visibility="invisible" />
+
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/search_friends_checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/personBio"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_marginEnd="11dp"
-            android:layout_marginRight="11dp" />
+            android:layout_marginRight="11dp"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 </LinearLayout>
