--- a/app/src/main/res/layout/fragment_friends_messages.xml
+++ b/app/src/main/res/layout/fragment_friends_messages.xml
@@ -12,4 +12,13 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"/>
 
+    <ProgressBar
+        android:id="@+id/progress_bar_messages_friends"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="gone"
+        android:layout_marginBottom="56dp"/>
+
 </FrameLayout>
